# vocab-trainer3

./: .gitignore  README.md  README_EN.md  RELEASE_NOTES_v0.1.0.md  SRS_SYSTEM_DOCUMENTATION_V3.md  ZMIANY_NOTIFICATION_WINDOW.md  index.html  master-test-data.json  notification.html  package-lock.json  package.json  popup.html  test-data-2.json  test-data.json  vite.config.ts
src/: App.tsx  main.tsx  notification.tsx  popup.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  tts.rs
src-tauri/src/db/: mod.rs
src-tauri/src/learning/: exercise_generator.rs  mod.rs  scheduler.rs  sm2.rs
src/components/: TtsPlayer.tsx
src/components/Dashboard/: Dashboard.css  Dashboard.tsx
src/components/ExercisePopup/: ExercisePopup.css  ExercisePopup.tsx  StackedExercise.css  StackedExercise.tsx
src/components/Flashcard/: Flashcard.css  Flashcard.tsx
src/components/ImportWords/: ImportWords.css  ImportWords.tsx
src/components/Mentor/: MentorCenter.css  MentorCenter.tsx  MentorDeepDive.tsx
src/components/SrsPanel/: SrsBadge.tsx  SrsGroupHeader.tsx  SrsPanel.css  SrsToday.tsx  srs-config.ts
src/components/TaskNotification/: TaskNotification.tsx
src/components/VocabManager/: VocabManager.css  VocabManager.tsx
src/hooks/: useAutoResizeWindow.ts  useTauri.ts
src/styles/: global.css  notification.css  popup-window.css
src/types/: index.ts
src/utils/: CategorizationAgent.ts  date.ts
