[package]
name = "vocab-trainer3"
version = "0.1.0"
description = "Vocabulary micro-learning system"
authors = ["you"]
edition = "2021"

[lib]
name = "vocab_trainer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", features = ["small_rng"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
dotenvy = "0.15"
jsonwebtoken = "9"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
    "Win32_Graphics_Gdi",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
